--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 	<title>SRA Explorer</title>
 
-	<!-- Bootstrap core CSS -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- Framework CSS -->
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
-	<!-- Custom styles for this template -->
+	<!-- SRA-explorer styles -->
 	<link href="css/sra-explorer.css" rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -28,56 +29,123 @@
 	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#">SRA-Explorer</a>
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">SRA-Explorer</a>
+	    </div>
+			<!-- Collect the nav links, forms, and other content for toggling -->
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+	        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> 0 saved datasets</a></li>
+	      </ul>
 			</div>
-			<form id="nav-search" class="navbar-form navbar-right" role="search" >
-				<div class="form-group">
-					<div class="input-group">
-						<input ng-model="searchText" type="text" class="form-control" placeholder="Search">
-						<span class="input-group-btn">
-							<button ng_click="search()" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
-						</span>
-					</div>
-				</div>
-			</form>
 		</div>
 	</div>
 
 	<div class="container">
+		
+		<div class="jumbotron">
+			<h1>SRA Explorer</h1>
+			<p>This tool aims to make datasets within the Sequence Read Archive more accessible.</p>
+			<form class="form-inline" role="search">
+			  <div class="form-group">
+			    <label for="searchText">Search for:</label>
+					<div class="input-group">
+						<div class="form-group has-feedback has-clear">
+							<input ng-model="searchText" id="searchText" type="text" class="form-control input-lg" placeholder="Enter accession number">
+							<a class="glyphicon glyphicon-remove-sign form-control-feedback form-control-clear" ng-click="searchText = ''" ng-show="searchText.length"></a>
+						</div>
+						<div class="input-group-btn">
+							<button ng_click="search()" class="btn btn-default btn-lg" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+						</div>
+					</div>
+			  </div>
+			</form>
+		</div>
 
-		<h1>SRA Explorer</h1>
-		<p class="lead">This is the testbed..  Searching for: <span ng-bind="searchText" class="label label-primary"></span></p>
-		<p>Found <span ng-bind="numSearchResults" class="badge"></span> results.</p>
+
 		<p ng-show="summaryURL">Query URL = <code ng-bind="summaryURL"></code></p>
-		<p ng-show="loadingSpinner"><span class="glyphicon glyphicon-refresh"></span> Loading..</p>
-		<table class="table">
-			<thead>
-				<tr>
-					<th>Title</th>
-					<th>Accession</th>
-					<th>Instrument</th>
-					<th>Total Bases (Mb)</th>
-					<th>Date Created</th>
-				</tr>
-			</thead>
-			<tbody>
-			  <tr ng-repeat="x in results">
-			    <td>{{ x.expxml.Title }}</td>
-			    <td>{{ x.runs.acc }}</td>
-			    <td>{{ x.runs.expxml.Platform.attributes.instrument_model }}</td>
-					<td>{{ x.runs.total_bases / 100000}}</td>
-			    <td>{{ x.createdate }}</td>
-			  </tr>
-			</tbody>
-		</table>
+		<p ng-show="loadingSpinner" class="text-center"><span class="glyphicon glyphicon-refresh fa-spin"></span> Loading..</p>
+		<div ng-show="searchResults">
+			
+			<p>Showing <span ng-bind="filteredResults.length" class="badge"></span> results.</p>
+			
+			<form class="form-inline" role="search">
+			  <div class="form-group">
+			    <label for="filterText">Filter results:</label>
+					<div class="input-group">
+						<div class="form-group has-feedback has-clear">
+							<input ng-model="filterText" id="filterText" type="text" class="form-control" placeholder="Enter search term">
+							<a class="glyphicon glyphicon-remove-sign form-control-feedback form-control-clear" ng-click="filterText = ''" ng-show="filterText.length"></a>
+						</div>
+						<div class="input-group-btn">
+			        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All Fields <span class="caret"></span></button>
+			        <ul class="dropdown-menu dropdown-menu-right">
+			          <li class="active"><a href="#">All Fields</a></li>
+			          <li><a href="#">Title</a></li>
+			          <li><a href="#">Accession</a></li>
+			          <li><a href="#">Instrument</a></li>
+			        </ul>
+			      </div>
+					</div>
+			  </div>
+			</form>
+			
+			<table class="table table-striped table-hover">
+				<thead>
+					<tr>
+						<th><input type="checkbox" ng-model="selectAll" ng-click="checkAll()"></th>
+						<th><a ng-click="sortType = 'title'; sortReverse = !sortReverse">
+								Title
+								<span ng-show="sortType == 'title' && !sortReverse" class="fa fa-caret-down"></span>
+        				<span ng-show="sortType == 'title' && sortReverse" class="fa fa-caret-up"></span>
+						</a></th>
+						<th><a ng-click="sortType = 'accession'; sortReverse = !sortReverse">
+								Accession
+								<span ng-show="sortType == 'accession' && !sortReverse" class="fa fa-caret-down"></span>
+        				<span ng-show="sortType == 'accession' && sortReverse" class="fa fa-caret-up"></span>
+						</a></th>
+						<th><a ng-click="sortType = 'platform'; sortReverse = !sortReverse">
+								Instrument
+								<span ng-show="sortType == 'platform' && !sortReverse" class="fa fa-caret-down"></span>
+        				<span ng-show="sortType == 'platform' && sortReverse" class="fa fa-caret-up"></span>
+						</a></th>
+						<th><a ng-click="sortType = 'total_bases'; sortReverse = !sortReverse">
+								Total Bases (Mb)
+								<span ng-show="sortType == 'total_bases' && !sortReverse" class="fa fa-caret-down"></span>
+        				<span ng-show="sortType == 'total_bases' && sortReverse" class="fa fa-caret-up"></span>
+						</a></th>
+						<th><a ng-click="sortType = 'createdate'; sortReverse = !sortReverse">
+								Date Created
+								<span ng-show="sortType == 'createdate' && !sortReverse" class="fa fa-caret-down"></span>
+        				<span ng-show="sortType == 'createdate' && sortReverse" class="fa fa-caret-up"></span>
+						</a></th>
+					</tr>
+				</thead>
+				<tbody>
+				  <tr ng-repeat="x in results | orderBy:sortType:sortReverse | filter:filterText as filteredResults" ng-click="rowClicked(x)" ng-class="{ success: x.selected }">
+						<td><input type="checkbox" ng-checked="x.selected" ng-click="toggleRow($event, x)"></td>
+				    <td>{{ x.title }}</td>
+				    <td>{{ x.accession }}</td>
+				    <td>{{ x.platform }}</td>
+						<td>{{ x.total_bases }}</td>
+				    <td>{{ x.createdate }}</td>
+				  </tr>
+				</tbody>
+			</table>
+		</div>
 		
 	</div><!-- /.container -->
 
 
 	<!-- Core JavaScript -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 	<!-- SRA-Explorer Code -->
 	<script src="js/sra-explorer_core.js"></script>
 	<script src="js/sraExplorerApp.js"></script>
