--- a/index.html
+++ b/index.html
@@ -254,6 +254,47 @@
               <div class="panel panel-default">
                 <div class="panel-heading" role="tab">
                   <h4 class="panel-title">
+                    <a role="button" data-toggle="collapse" data-parent="#savedDatasetsAccordion" href="#fastqURLs_aspera">Aspera commands for downloading FastQ files</a>
+                  </h4>
+                </div>
+                <div id="fastqURLs_aspera" class="panel-collapse collapse" role="tabpanel">
+                  <div class="panel-body">
+                    <p>This list of bash <code>ascp</code> commands to download each FastQ file from the ENA using the <a href="https://downloads.asperasoft.com/en/downloads/8?list" target="_blank" rel="nofollow">Aspera download tool</a>.</p>
+                    <form class="form-horizontal">
+                      <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">ascp openssh key path</label>
+                        <div class="col-sm-10">
+                          <div class="input-group">
+                            <input type="text" class="form-control" id="ascp_openssh_location" ng-model="ascp_openssh_location">
+                            <span class="input-group-btn">
+                              <button class="btn btn-default" type="button" ng-click="set_ascp_openssh_location('linux')"><i class="fa fa-linux" aria-hidden="true"></i> Linux</button>
+                              <button class="btn btn-default" type="button" ng-click="set_ascp_openssh_location('osx')"><i class="fa fa-apple" aria-hidden="true"></i> OSX</button>
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">Rename files?</label>
+                        <div class="col-sm-10">
+                          <label class="radio-inline">
+                            <input type="radio" ng-model="ascp_append_mv" ng-value="true"> Append <code>mv</code> command to rename downloaded files
+                          </label>
+                          <label class="radio-inline">
+                            <input type="radio" ng-model="ascp_append_mv" ng-value="false"> Don't rename files
+                          </label>
+                        </div>
+                      </div>
+                    </form>
+                    <p><button class="btn btn-sm btn-default btn-copy" data-clipboard-target="#fastqURLs_aspera_content"><span class="glyphicon glyphicon-copy"></span> Copy</button></p>
+                    <p ng-show="savedResultsENAaccessions.length < savedResults.length" class="text-center"><span class="glyphicon glyphicon-refresh fa-spin"></span> Loading <span class="badge"><span ng-bind="savedResultsENAaccessions.length"></span> / <span ng-bind="savedResults.length"></span></span>..</p>
+                    <pre ng-show="savedResultsENAfastq.length > 0" id="fastqURLs_aspera_content"><code>#!/usr/bin/env bash</code><code ng-repeat="x in savedResultsENAfastq">{{ nlChr }}ascp -QT -l 300m -P33001 -i {{ ascp_openssh_location }} {{ x.asperaurl }} .<span ng-show="ascp_append_mv"> && mv {{ x.filename }} {{ x.niceFilename }}</span></code></pre>
+                  </div>
+                </div>
+              </div>
+
+              <div class="panel panel-default">
+                <div class="panel-heading" role="tab">
+                  <h4 class="panel-title">
                     <a role="button" data-toggle="collapse" data-parent="#savedDatasetsAccordion" href="#fastqURLs_niceNames">Cluster Flow FastQ download file (nice filenames)</a>
                   </h4>
                 </div>
@@ -374,6 +415,8 @@
             $scope.showSaved = false;
             $scope.tabChr = "\t";
             $scope.nlChr = "\n";
+            $scope.ascp_openssh_location = '$HOME/.aspera/connect/etc/asperaweb_id_dsa.openssh';
+            $scope.ascp_append_mv = true;
 
             $scope.search  = function() { searchSRA($scope.searchText); };
 
@@ -520,6 +563,8 @@
                               'accession': value['accession'],
                               'cleanTitle': value['cleanTitle'],
                               'url': 'ftp://'+urls[j],
+                              'asperaurl': urls[j].replace('ftp.sra.ebi.ac.uk/', 'era-fasp@fasp.sra.ebi.ac.uk:'),
+                              'filename': fname,
                               'niceFilename': value['accession']+'_'+value['cleanTitle']+fname.replace(value['accession'], '')
                             });
                           }
@@ -531,6 +576,15 @@
               }
             }
 
+            // Customise the ascp openssh location with buttons
+            $scope.set_ascp_openssh_location = function(loc){
+              if(loc == 'linux'){
+                $scope.ascp_openssh_location = '$HOME/.aspera/connect/etc/asperaweb_id_dsa.openssh';
+              }
+              if(loc == 'osx'){
+                $scope.ascp_openssh_location = '$HOME/Applications/Aspera\\ Connect.app/Contents/Resources/asperaweb_id_dsa.openssh';
+              }
+            }
         });
 
         // Stolen frmo http://davidwalsh.name/convert-xml-json
